--- a/client/src/components/views/SNS/Sns_posts.scss
+++ b/client/src/components/views/SNS/Sns_posts.scss
@@ -1,6 +1,6 @@
-.uploadFile {
-  width: 50%;
-  margin: 1em auto;
-  margin-top: 30px;
-  border: 1em solid #f7f8f9;
+.post_container {
+	width: 50%;
+	margin: 1em auto;
+	margin-top: 30px;
+	border: 1em solid #f7f8f9;
 }
