--- a/client/src/components/views/NavBar/S_NavBar.scss
+++ b/client/src/components/views/NavBar/S_NavBar.scss
@@ -1,6 +1,10 @@
 .s_nav_container {
-	display: flex ;
-	justify-content : center;
+	display: flex;
+	justify-content: center;
 	height: 8vh;
+	width: 100%;
 	background: white;
+	.s_nav_1 {
+		width: 100%;
+	}
 }
