--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
+
 body {
 	background-color: #f7f8f9;
+	font-family: 'Do Hyeon', sans-serif;
 }
