--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap');
+
 
 body {
 	background-color: #f7f8f9;
-	font-family: 'Do Hyeon', sans-serif;
+	font-family: 'Nanum Gothic Coding', monospace;
 }
