모달이미지 구현

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap');
-
+@import '~react-image-gallery/styles/css/image-gallery.css';
 
 body {
 	background-color: #f7f8f9;
