--- a/client/src/components/views/MyPage/sections/RenderModal.scss
+++ b/client/src/components/views/MyPage/sections/RenderModal.scss
@@ -1,4 +1,18 @@
 .modal_container {
 	display: flex;
 	justify-content: space-between;
+	width: 955px;
+	height: 851px;
+	.modal_image {
+		width: 50%;
+		height: 100%;
+		img {
+			width: 400px;
+			height: 600px;
+		}
+		div {
+			width: 100%;
+			height: 100%;
+		}
+	}
 }
