--- a/client/src/components/views/SNS/sections/RenderModal.scss
+++ b/client/src/components/views/SNS/sections/RenderModal.scss
@@ -1,4 +1,22 @@
 .modal_container {
 	display: flex;
 	justify-content: space-between;
+	width: 955px;
+	height: 851px;
+	.modal_image {
+		width: 50%;
+		height: 75%;
+		img {
+			width: 400px;
+			height: 90%;
+		}
+		div {
+			width: 100%;
+			height: 100%;
+		}
+		.image-gallery-thumbnails-wrapper bottom {
+			width: 20%;
+			height: 10%;
+		}
+	}
 }
