--- a/client/src/components/views/Shoppingmall/LandingPage/Sections/ImageBanner.scss
+++ b/client/src/components/views/Shoppingmall/LandingPage/Sections/ImageBanner.scss
@@ -61,7 +61,11 @@
     border-style: initial;
     border-color: initial;
     border-image: initial;
+    @media screen and (max-width: 64em) {
+        display: none;
+    }
 }
+
 
 .ban_scroll_text{
     font-weight: 700;
