--- a/client/src/components/views/Shoppingmall/LandingPage/Sections/WeeklyIssue.scss
+++ b/client/src/components/views/Shoppingmall/LandingPage/Sections/WeeklyIssue.scss
@@ -1,36 +1,45 @@
-.week {
+.jUQCwF {
     box-sizing: border-box;
     margin-bottom: 2.125rem;
     margin-top: 2.5rem;
     padding-left: 1.25rem;
     padding-right: 1.25rem;
     text-align: center;
+    @media screen and (min-width: 64em){
+        margin-bottom: 7.5rem;
+        margin-top: 5rem;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
 }
 
 div {
     display: block;
 }
 
-.week_div {
+.dcUIZv {
     box-sizing: border-box;
     padding-bottom: 0px;
+    @media screen and (min-width: 64em) {
+        padding-bottom: 2.5rem;
+    }
+    
 }
 
 
-.week_div_h2 {
+.kbLWSI {
     box-sizing: border-box;
     margin-bottom: 1rem;
     text-align: left;
-    @media screen and (min-width: 64em) {
+    @media screen and (min-width: 64em){
         margin-bottom: 1.125rem;
         text-align: center;
-
     }
 }
 
 
 
-.week_h2 {
+.jtrXAN  {
     box-sizing: border-box;
     color: rgb(38, 40, 43);
     font-weight: 700;
@@ -38,15 +47,6 @@ div {
     letter-spacing: -0.025rem;
     line-height: 1.33;
     margin: 0px;
-    @media (min-width: 64rem){
-        box-sizing: border-box;
-        color: rgb(38, 40, 43);
-        font-weight: 700;
-        font-size: 1.375rem;
-        letter-spacing: -0.025rem;
-        line-height: 1.22;
-        margin: 0px;
-    }
 }
 
 h2 {
@@ -59,7 +59,7 @@ h2 {
     font-weight: bold;
 }
 
-.week_card_div {
+.egJJoT {
     box-sizing: border-box;
     display: flex;
     margin-left: -0.3125rem;
@@ -69,15 +69,33 @@ h2 {
         margin-left: 4.2%;
         margin-right: 4.2%;
     }
+    @media screen and (min-width: 64em){
+        margin-left: -0.25rem;
+        margin-right: -0.25rem;
+    }
+
 }
 
-.week_card_div_div {
+.egJJoT > div:nth-child(2n+1) {
+    @media (min-width: 64rem) {
+        padding-left: 0px;
+        padding-right: 2.5rem;
+    }
+}
+
+.issKbk {
     box-sizing: border-box;
     margin-bottom: 1.625rem;
     width: 100%;
     padding-left: 0.3125rem;
     padding-right: 0.3125rem;
     flex: 1 1 auto;
+    @media screen and (min-width: 64em) {
+        margin-bottom: 5rem;
+        width: 50%;
+        padding-left: 0.25rem;
+        padding-right: 0.25rem;
+    }
 }
 
 a, button, input, optgroup, textarea, select {
@@ -108,6 +126,47 @@ a {
     border-color: rgb(232, 235, 237);
     border-radius: 0.5rem;
     overflow: hidden;
+    @media screen and (min-width: 64em){
+        border-width: initial;
+        border-style: none;
+        border-color: initial;
+        border-image: initial;
+        border-radius: 0px;
+    }
+}
+
+.dCSrgH {
+    box-sizing: border-box;
+    margin-top: 0.375rem;
+    text-align: left;
+    @media screen and (min-width: 64em) {
+    margin-top: 1.15rem;
+    }
+}
+
+.dmMooq {
+    box-sizing: border-box;
+    color: rgb(38, 40, 43);
+    font-weight: 700;
+    font-size: 2rem;
+    letter-spacing: -0.025rem;
+    line-height: 1.34;
+    white-space: pre-line;
+    margin: 0px;
+}
+
+.cibkws {
+    box-sizing: border-box;
+    color: rgb(232, 235, 237);
+    display: none;
+    font-weight: 700;
+    font-size: 1.125rem;
+    letter-spacing: -0.025rem;
+    line-height: 1.38;
+    margin: 0.75rem 0px 0px;
+    @media screen and (min-width: 64em){
+    display: block;
+    }
 }
 
 .iTrvDl {
@@ -128,6 +187,9 @@ a {
     transition-timing-function: ease-in-out;
     transition-duration: 250ms;
     transition-property: opacity;
+    @media screen and (min-width: 64em){
+        transition-property: transform, opacity;
+    }
 }
 
 .cHUIND {
@@ -139,6 +201,13 @@ a {
     right: 0px;
     bottom: 0px;
     left: 0px;
+    size: 100vw;
+    @media screen and (min-width: 64em){
+        transition-property: transform;
+        transition-duration: 250ms;
+        transition-timing-function: ease-in-out;
+        size: 50vw;
+    }
 }
 
 img {
