--- a/client/src/components/views/Shoppingmall/DetailProductPage/Sections/ProductImage.scss
+++ b/client/src/components/views/Shoppingmall/DetailProductPage/Sections/ProductImage.scss
@@ -1,3 +1,31 @@
+.feTtOu {
+    box-sizing: border-box;
+    max-width: 100%;
+    width: 100%;
+    padding-left: 0.3125rem;
+    padding-right: 0.3125rem;
+    flex: 0 1 auto;
+    @media screen and (min-width: 64em) {
+        max-width: 45.625rem;
+        width: 58.3333%;
+        padding-left: 0.25rem;
+        padding-right: 0.25rem;
+    }
+}
+
+.jbpLml {
+    box-sizing: border-box;
+    border-color: rgb(232, 235, 237);
+    border-radius: 0px;
+    border-style: solid;
+    border-width: 0px;
+    overflow: hidden;
+    @media screen and (min-width: 64em){
+        border-radius: 8px;
+        border-width: 1px;
+    }
+}
+
 .hOkNKG {
     position: relative;
     display: block;
@@ -19,8 +47,8 @@
 
 .ecDCYM {
     display: block;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: 700px;
     object-fit: cover;
     object-position: center center;
     position: absolute;
@@ -28,9 +56,4 @@
     right: 0px;
     bottom: 0px;
     left: 0px;
-}
-
-img {
-    backface-visibility: hidden;
-    transform: translateZ(0px);
 }
