좋아요 추가

--- a/client/src/components/views/SNS/sections/RenderModal.scss
+++ b/client/src/components/views/SNS/sections/RenderModal.scss
@@ -1,6 +1,6 @@
 .modal_container {
 	display: flex;
-	justify-content: space-between;
+	justify-content: flex-start;
 	width: 955px;
 	height: 851px;
 	.modal_image {
