--- a/client/src/components/views/NavBar/s_sections/Store_NavBar.scss
+++ b/client/src/components/views/NavBar/s_sections/Store_NavBar.scss
@@ -1,10 +1,12 @@
 .Store_navbar{
-    display: inline;
-
-    h3 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    h1 {
         color: #1b1d1f;
-		display : inline;
-	    margin-Left: 1em;
-		font-Weight: bold;
+		margin-left: 1em;
+		font-weight: bold;
+		display: flex;
+		justify-content: center;
     }
 }
