--- a/client/src/components/views/MyPage/Mypage.scss
+++ b/client/src/components/views/MyPage/Mypage.scss
@@ -1,4 +1,18 @@
 .container {
+
+	.user_posts {
+		width: 80%;
+	margin: 2rem auto;
+	margin-top: 100px;
+	}
+
+	.input_search{
+		display: flex;
+		justify-content: flex-end;
+		margin : 1rem auto
+	}
+
+
 	.list_container {
 		width: 75vw;
 		height: 24vw;
