--- a/client/src/components/views/NavBar/NavBar.scss
+++ b/client/src/components/views/NavBar/NavBar.scss
@@ -5,7 +5,9 @@
 	background: #ffffff;
 	align-items : center;
 	width: 100%;
-	// position: fixed;
-	// position: absolute;
 	position: relative;
+	// .part_section{
+	// 	display: flex;
+	// 	justify-content: flex-end;
+	// }
 }
