--- a/client/src/components/views/SNS/utils/RenderDescription.scss
+++ b/client/src/components/views/SNS/utils/RenderDescription.scss
@@ -10,13 +10,40 @@
     display: none; /* Chrome, Safari, Opera*/
 }
 
+.post_user_container{
+    display: flex;
+
+}
 
  .comments_input{
     .inputstyle{
-        width: 300px;
+        width: 200px;
     }
  }
- .post_user_info{
+ .post_info{
      display: flex;
+     flex-direction: column;
+     .post_user_container{
+        .post_user_name{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            
+        }
+         .post_user_image{
+             img{
+                width: 40px;
+                height : 40px;
+                border-radius: 16px;
+             }
+         }
+         .post_user_name{
+             font-size: 25px;
+         }
+     }
+
+     .post_text{
+         font-size: 20px;
+     }
      
  }
