--- a/client/src/components/views/NavBar/sections/LandingPageNav.scss
+++ b/client/src/components/views/NavBar/sections/LandingPageNav.scss
@@ -1,6 +1,6 @@
 .landingPage_nav {
 	display: inline;
-
+	font-family: 'Courgette', cursive;
 	h1 {
 		color: #1b1d1f;
 		display: inline;
@@ -8,3 +8,4 @@
 		font-weight: bold;
 	}
 }
+@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Great+Vibes&display=swap');
