--- a/client/src/components/views/Shoppingmall/DetailProductPage/Sections/ProductImage.scss
+++ b/client/src/components/views/Shoppingmall/DetailProductPage/Sections/ProductImage.scss
@@ -32,6 +32,7 @@
     transform: translateZ(0px);
     backface-visibility: hidden;
     overflow: hidden;
+    background-size: cover;
 }
 
 .ecDCYM.lazy.loaded {
@@ -48,7 +49,7 @@
 .ecDCYM {
     display: block;
     width: auto;
-    height: 700px;
+    height: 300px;
     object-fit: cover;
     object-position: center center;
     position: absolute;
