--- a/client/src/components/views/Shoppingmall/DetailProductPage/DetailProductPage.scss
+++ b/client/src/components/views/Shoppingmall/DetailProductPage/DetailProductPage.scss
@@ -73,6 +73,7 @@ p {
     flex-direction: column;
     -webkit-box-pack: justify;
     justify-content: space-between;
+    //background-color: rgba(235, 235, 235, 0.534);
     @media screen and (min-width: 64em){
         flex-direction: row;
     }
