--- a/client/src/components/views/Shoppingmall/DetailProductPage/Sections/ProductDescribe.scss
+++ b/client/src/components/views/Shoppingmall/DetailProductPage/Sections/ProductDescribe.scss
@@ -46,6 +46,54 @@
     }
 }
 
+.cukPBe {
+    box-sizing: border-box;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
+    margin-left: -0.3125rem;
+    margin-right: -0.3125rem;
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+
+.kLGjpY {
+    box-sizing: border-box;
+    width: 100%;
+    padding-left: 0.3125rem;
+    padding-right: 0.3125rem;
+    flex: 0 0 auto;
+}
+
+.bSJKSD {
+    -webkit-box-align: center;
+    align-items: center;
+    appearance: none;
+    box-sizing: border-box;
+    cursor: pointer;
+    -webkit-box-pack: center;
+    justify-content: center;
+    position: relative;
+    user-select: none;
+    height: 2.75rem;
+    width: 100%;
+    display: flex;
+    font-weight: 700;
+    font-size: 1rem;
+    letter-spacing: -0.025rem;
+    line-height: 1.31;
+    text-indent: 11px;
+    border-width: 0px;
+    border-style: initial;
+    border-color: initial;
+    border-image: initial;
+    border-radius: 9999px;
+    outline: none;
+    text-decoration: none;
+}
+
 .cMXQmD {
     box-sizing: border-box;
     will-change: max-height;
