비밀번호 수정 scss 완성

--- a/client/src/components/views/RegisterPage/sections/Change_Password.scss
+++ b/client/src/components/views/RegisterPage/sections/Change_Password.scss
@@ -1,9 +1,76 @@
 .change_password_container {
-	border: 1px solid #e8ebed;
-	height: 589px;
-	width: 699px;
-	margin-top: 1rem;
-	margin-right: 6rem;
-	background-color: #ffffff;
-	z-index: 3;
+	// border: 1px solid #e8ebed;
+	// height: 589px;
+	// width: 699px;
+	// margin-top: 1rem;
+	// margin-right: 6rem;
+	// background-color: #ffffff;
+	// z-index: 3;
+	-webkit-border-radius: 0 6px 6px 0;
+    -moz-border-radius: 0 6px 6px 0;
+    border-radius: 0 6px 6px 0;
+    border-left-color: #E8EBED;
+    border-left-style: solid;
+    border-left-width: 1px;
+    min-height: 289px;
+    width: 700px;
+    background-color: white;
+	.title{
+	color: rgb(89, 31, 165);
+	font-size: 20px;
+	margin-top: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
+	}
+  .input_label{
+	  .input-text{
+		float: left;
+		width: 130px;
+		color: #26282B;
+		font-size: 14px;
+		font-weight: bold;
+		line-height: 40px;
+		padding-left: 20px;
+	  }
+	  .label1{
+		-webkit-border-radius: 6px;
+		-moz-border-radius: 6px;
+		border-radius: 6px;
+		float: right;
+		display: block;
+		margin-top: -1px;
+		border-color: #C9CDD2;
+		border-style: solid;
+		border-width: 1px;
+		width: 328px;
+		height: 40px;
+		overflow: hidden;
+	  }
+  }
+ 
 }
+
+.submit_password {
+	width: 155px;
+	cursor: pointer;
+	color: white;
+	font-size: 14px;
+	font-weight: bold;
+	user-select: none;
+	line-height: 1.3;
+	padding: 14px 0px;
+	margin: 20px 0 0 0;
+	background: rgb(74, 218, 175);
+	border-radius: 6px;
+	border-width: initial;
+	border-style: none;
+	border-color: initial;
+	border-image: initial;
+	outline: none;
+	transition: background-color 0.12s ease-in-out 0s;
+	float: right;
+    clear: both;
+    margin-top: 30px;
+	width: 150px;
+	text-align: center;
+  }
